--- a/jsnack2/index.html
+++ b/jsnack2/index.html
@@ -15,9 +15,11 @@
 </head>
 <body>
   <main>
-
+    <div class="container">
+      <div id="text-red">DIV CON TESTO ROSSO TEORICO</div>
+      <div id="text-green">DIV CON TESTO VERDE TEORICO</div>
+    </div>
   </main>
-
   <!-- My JS file -->
   <script src="js/script.js"></script>
   <!-- Bootstrap JS file -->
