--- a/jsnack2/index.html
+++ b/jsnack2/index.html
@@ -16,8 +16,8 @@
 <body>
   <main>
     <div class="container">
-      <div id="text-red">DIV CON TESTO ROSSO TEORICO</div>
-      <div id="text-green">DIV CON TESTO VERDE TEORICO</div>
+      <div id="text-red">I NUMERI DISPARI STAMPATI SONO:</div>
+      <div id="text-green">I NUMERI PARI STAMPATI SONO:</div>
     </div>
   </main>
   <!-- My JS file -->
